依赖更新